--- a/.github/workflows/choco.yml
+++ b/.github/workflows/choco.yml
@@ -1,8 +1,8 @@
 name: Chocolatine
 on:
   push:
-    branches:
-      - '!ga-ignore-*'
+    branches-ignore:
+      - 'ga-ignore-*'
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
 jobs:
