--- a/.github/workflows/choco.yml
+++ b/.github/workflows/choco.yml
@@ -20,7 +20,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "$EXECUTABLES"
+          files: "my_sokoban"
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'true'
         run : echo All files exists!
