--- a/.github/workflows/choco.yml
+++ b/.github/workflows/choco.yml
@@ -27,15 +27,15 @@ jobs:
           do
           [ ! -f "$i" ] && echo "::error::$i is missing." && exit 1
           done
-  # run_tests:
-  #   runs-on: ubuntu-latest
-  #   container: epitechcontent/epitest-docker:latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-  #     - name: Units test
-  #       run: make tests_run
+  run_tests:
+    runs-on: ubuntu-latest
+    container: epitechcontent/epitest-docker:latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Units test
+        run: make tests_run
   # push_to_mirror:
   #   runs-on: ubuntu-latest
   #   container: epitechcontent/epitest-docker:latest
