--- a/.github/workflows/choco.yml
+++ b/.github/workflows/choco.yml
@@ -5,7 +5,7 @@ on:
       - 'ga-ignore-*'
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
-  EXECUTABLES: "my_sokoban,pushswap"
+  EXECUTABLES: "my_sokoban"
 jobs:
   check_program_compilation:
     runs-on: ubuntu-latest
@@ -36,16 +36,16 @@ jobs:
           fetch-depth: 0
       - name: Units test
         run: make tests_run
-  # push_to_mirror:
-  #   runs-on: ubuntu-latest
-  #   container: epitechcontent/epitest-docker:latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-  #     - uses: pixta-dev/repository-mirroring-action@v1
-  #       with:
-  #         target_repo_url:
-  #           "$(MIRROR_URL)"
-  #         ssh_private_key:
-  #           ${{ secrets.PRIVATE_KEY }}
+  push_to_mirror:
+    runs-on: ubuntu-latest
+    container: epitechcontent/epitest-docker:latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url:
+            "$(MIRROR_URL)"
+          ssh_private_key:
+            ${{ secrets.PRIVATE_KEY }}
