--- a/.github/workflows/choco.yml
+++ b/.github/workflows/choco.yml
@@ -4,7 +4,7 @@ on:
     branches-ignore:
       - 'ga-ignore-*'
 env:
-  MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
+  MIRROR_URL: "git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git"
   EXECUTABLES: "my_sokoban"
 jobs:
   check_program_compilation:
@@ -45,6 +45,6 @@ jobs:
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
-            $(MIRROR_URL)
+            $MIRROR_URL
           ssh_private_key:
             ${{ secrets.PRIVATE_KEY }}
