--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -38,6 +38,8 @@ jobs:
         run: make tests_run
   push_to_mirror:
     runs-on: ubuntu-latest
+    env:
+      MIRROR_URL: "git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git"
     steps:
       - uses: actions/checkout@v3
         with:
