--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -10,6 +10,9 @@ jobs:
   check_program_compilation:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
+    env:
+      MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
+      EXECUTABLES: "my_sokoban"
     steps:
       - uses: actions/checkout@v3
         with:
@@ -38,6 +41,9 @@ jobs:
         run: make tests_run
   push_to_mirror:
     runs-on: ubuntu-latest
+    env:
+      MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
+      EXECUTABLES: "my_sokoban"
     steps:
       - uses: actions/checkout@v3
         with:
