--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -52,6 +52,6 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: $MIRROR_URL
+          target_repo_url: "$MIRROR_URL"
           ssh_private_key:
             ${{ secrets.PRIVATE_KEY }}
