--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -28,7 +28,7 @@ jobs:
           read -ra ADDR <<< "$filename"
           for i in "${ADDR[@]}";
           do
-          [ ! -f "$i" ] && echo "::error::$i is missing." && exit 1
+          [ ! -f "$i" ] && echo "::error::$i is missing."
           done
   run_tests:
     runs-on: ubuntu-latest
