--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -27,6 +27,7 @@ jobs:
           do
           [ ! -f "$i" ] && echo "::error::$i is missing."
           done
+          exit 0
   run_tests:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
