--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -25,9 +25,9 @@ jobs:
           read -ra ADDR <<< "$filename"
           for i in "${ADDR[@]}"
           do
-          [ ! -f "$i" ] && echo "::error::$i is missing."
+          [ ! -f "$i" ] && echo "::error::$i is missing." || exit 1
+
           done
-          exit 0
   run_tests:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
