--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -5,7 +5,7 @@ on:
       - 'ga-ignore-*'
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
-  EXECUTABLES: "my_sokoban,pushswap"
+  EXECUTABLES: "my_sokoban"
 jobs:
   check_program_compilation:
     runs-on: ubuntu-latest
