--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -25,8 +25,8 @@ jobs:
           read -ra ADDR <<< "$filename"
           for i in "${ADDR[@]}"
           do
-          [ ! -f "$i" ] && echo "::error::$i is missing." || exit 1
-
+          [ ! -f "$i" ] && echo "::error::$i is missing."
+          exit 1
           done
   run_tests:
     runs-on: ubuntu-latest
