--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -1,12 +1,21 @@
 name: Chocolatine
 on:
-  push:
+  [push | pull]:
     branches-ignore:
       - 'ga-ignore-*'
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
   EXECUTABLES: "my_sokoban"
 jobs:
+  check_repository_cleanliness:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+            fetch-depth: 0
+      - name: Check useless files
+        run:  |
+        echo date
   check_program_compilation:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
@@ -19,7 +28,7 @@ jobs:
       - name: Clean build
         run: make clean
       - name: Check executables
-        run: |
+        run:  |
           filename="$EXECUTABLES"
           IFS=','
           read -ra ADDR <<< "$filename"
