--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -1,7 +1,9 @@
 name: Chocolatine
-on: [push, pull_request]
-  branches-ignore:
-    - 'ga-ignore-*'
+
+on:
+  push:
+    branches-ignore:
+      - 'ga-ignore-*'
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-thomas.tran.git
   EXECUTABLES: "my_sokoban"
