--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -26,8 +26,9 @@ jobs:
           var=1
           echo "::error title=Unwanted file detected,file=$FILE,line=10,col=15:: $FILE";
           done
-          if [ $var == "1" ]; then
-              exit 1
+          if [ $var -eq "1" ];
+          then
+            exit 1;
           fi
   check_program_compilation:
     runs-on: ubuntu-latest
