--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -28,7 +28,7 @@ jobs:
           done
           if [ $var -eq "1" ];
           then
-            exit 1;
+            exit 1
           fi
   check_program_compilation:
     runs-on: ubuntu-latest
