--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -28,6 +28,7 @@ jobs:
           done
           echo "var = $var"
           [ $var -eq "1" ] && exit 1
+          exit 0
   check_program_compilation:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
