[ADD] Some files to test the job

--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -20,14 +20,13 @@ jobs:
       - name: Check useless files
         run:  |
           var=0
-          find . -name "*.a" -o -name "*.o" -o -name "#*#" -o -name "*~" -o -name "*pain_au_chocolat*" -o -name "*.so" -o -name "*.gcno" -o -name "*.gcda" -o -name "*.gcovr" |
+          find . -name "*.a" -o -name "*.o" -o -name "*.exe" -o -name "#*#" -o -name "*~" -o -name "*pain_au_chocolat*" -o -name "*.so" -o -name "*.gcno" -o -name "*.gcda" -o -name "*.gcov" |
           while read FILE;
           do
           var=1
           echo "::error title=Unwanted file detected,file=$FILE,line=10,col=15:: $FILE";
           done
-          [ $var -eq "1" ] && exit 1
-          exit 0
+          exit $var
   check_program_compilation:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
