--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -19,14 +19,14 @@ jobs:
             fetch-depth: 0
       - name: Check useless files
         run:  |
-          declare -i value=0
+          value=0
           find . -name "*.a" -o -name "*.o" -o -name "*.exe" -o -name "#*#" -o -name "*~" -o -name "*pain_au_chocolat*" -o -name "*.so" -o -name "*.gcno" -o -name "*.gcda" -o -name "*.gcov" |
           while read FILE;
           do
           value=1
           echo "::error title=Unwanted file detected,file=$FILE,line=10,col=15:: $FILE";
           done
-          exit value
+          ::exit::
   check_program_compilation:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
