--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -14,7 +14,7 @@ jobs:
   check_repository_cleanliness:
     runs-on: ubuntu-latest
     env:
-    value=0
+      value: "0"
     steps:
       - uses: actions/checkout@v3
         with:
